--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "preferans/oauth-bridge",
   "license": "MIT",
   "type": "library",
-  "description": "A library focused on API Authentication.",
+  "description": "A library focused on API Authentication for Phalcon applications.",
   "keywords": [
     "auth",
     "api",
@@ -10,10 +10,12 @@
     "oauth2",
     "micro",
     "phalcon",
+    "phalcon",
     "preferans"
   ],
   "require": {
     "php": ">=7.0 <7.2",
+    "ext-phalcon": ">=3.2.0 <4.0",
     "league/oauth2-server": "^6.0"
   },
   "authors": [
