--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "ext-phalcon": ">=3.2.0 <4.0",
     "league/oauth2-server": "^6.0"
   },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "3.0.x-dev"
+  },
   "authors": [
     {
       "name": "Serghei Iakovlev",
@@ -27,5 +30,8 @@
     "psr-4": {
       "Preferans\\Oauth\\": "src/"
     }
+  },
+  "scripts": {
+    "phpcs": "vendor/bin/phpcs"
   }
 }
