Added phpstan tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,8 @@ install:
   - $(phpenv which php) --ri phalcon
 
 script:
-  - vendor/bin/phpcs
+  - composer phpcs
+  - composer phpstan
 
 notifications:
   email:
