--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "league/oauth2-server": "^6.0"
     },
     "require-dev": {
+        "phpstan/phpstan": "@stable",
         "squizlabs/php_codesniffer": "3.0.x-dev"
     },
     "authors": [
@@ -32,6 +33,7 @@
         }
     },
     "scripts": {
+        "phpstan": "vendor/bin/phpstan analyse -l 5 -c phpstan.neon src",
         "phpcs": "vendor/bin/phpcs"
     }
 }
