--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "php": ">=7.0 <7.2",
         "ext-openssl": "*",
         "ext-phalcon": ">=3.2.0 <4.0",
-        "league/oauth2-server": "^6.0"
+        "lcobucci/jwt": "^3.2"
     },
     "require-dev": {
         "phpstan/phpstan": "@stable",
@@ -46,6 +46,9 @@
             "role": "Developer"
         }
     ],
+    "conflict": {
+        "league/oauth2-server": "*"
+    },
     "support": {
         "source": "https://github.com/preferans/oauth-bridge",
         "issues": "https://github.com/preferans/oauth-bridge/issues",
