--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,9 @@
 # https://help.github.com/articles/ignoring-files/#create-a-global-gitignore
 
 vendor
+build
 clover.xml
+phpcs.xml
 phpunit.xml
 composer.phar
 composer.lock
