--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     },
     "require-dev": {
         "phpstan/phpstan": "@stable",
+        "phpunit/phpunit": "@stable",
         "squizlabs/php_codesniffer": "3.0.x-dev"
     },
     "authors": [
@@ -61,6 +62,7 @@
     },
     "scripts": {
         "phpstan": "vendor/bin/phpstan analyse -l 6 -c phpstan.neon src",
-        "phpcs": "vendor/bin/phpcs"
+        "phpcs": "vendor/bin/phpcs",
+        "phpunit": "vendor/bin/phpunit"
     }
 }
