--- a/composer.json
+++ b/composer.json
@@ -60,9 +60,14 @@
             "Preferans\\Oauth\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Preferans\\Oauth\\Tests\\": "tests/"
+        }
+    },
     "scripts": {
         "phpstan": "vendor/bin/phpstan analyse -l 6 -c phpstan.neon src",
         "phpcs": "vendor/bin/phpcs",
-        "phpunit": "vendor/bin/phpunit"
+        "phpunit": "vendor/bin/phpunit -c phpunit.xml.dist tests"
     }
 }
