--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,24 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <phpunit
+    bootstrap="tests/Bootstrap.php"
     colors="true"
+    convertErrorsToExceptions="true"
     convertNoticesToExceptions="true"
     convertWarningsToExceptions="true"
-    stopOnError="true"
-    stopOnFailure="true"
+    verbose="true"
+    stopOnError="false"
+    stopOnFailure="false"
     stopOnIncomplete="false"
     stopOnSkipped="false"
-    bootstrap="tests/Bootstrap.php">
+    processIsolation="false"
+    backupGlobals="false"
+    syntaxCheck="true"
+    columns="max">
 
     <testsuites name="General Test Suite">
-        <directory>./tests/</directory>
+        <directory suffix=".php">./tests/</directory>
     </testsuites>
 
     <filter>
         <whitelist addUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">src</directory>
+            <directory suffix=".php">./src</directory>
         </whitelist>
     </filter>
+
+    <php>
+        <ini name="date.timezone" value="UTC"/>
+        <ini name="display_errors" value="on"/>
+        <ini name="display_startup_errors" value="on"/>
+    </php>
 
     <logging>
         <log
