--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -42,13 +42,6 @@
             lowUpperBound="60"
             highLowerBound="90"/>
 
-        <log
-            type="coverage-html"
-            target="build/coverage"
-            title="preferans/oauth-bridge"
-            charset="UTF-8" yui="true"
-            highlight="true"
-            lowUpperBound="60"
-            highLowerBound="90"/>
+        <log type="coverage-clover" target="build/coverage/clover.xml"/>
     </logging>
 </phpunit>
