Used latest php_codesniffer

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "phpstan/phpstan": "@stable",
         "phpunit/phpunit": "@stable",
         "humbug/humbug": "1.0.0-RC.0@RC",
-        "squizlabs/php_codesniffer": "3.0.x-dev"
+        "squizlabs/php_codesniffer": "@stable"
     },
     "authors": [
         {
