--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ sudo: false
 php:
   - 7.0
   - 7.1
+  - 7.2
 
 git:
   depth: 1
@@ -13,7 +14,7 @@ git:
 cache:
   apt: true
   ccache: true
-  timeout: 691200
+  timeout: 604800
   directories:
     - vendor
     - $HOME/.composer/cache
@@ -22,6 +23,11 @@ cache:
 env:
   global:
     - PATH="$PATH:~/bin"
+
+matrix:
+    fast_finish: true
+    allow_failures:
+        - php: 7.2
 
 before_install:
   - if [ ! -z "${GH_TOKEN}" ]; then composer config github-oauth.github.com ${GH_TOKEN}; echo "Configured Github token"; fi;
@@ -38,9 +44,10 @@ script:
   - vendor/bin/humbug
   - vendor/bin/humbug stats
 
+after_success:
+    - if [[ ! -z "${CODECOV_TOKEN}" ]]; then bash <(curl -s https://codecov.io/bash); fi;
+
 notifications:
   email:
-    recipients:
-      - serghei@phalconphp.com
-    on_success: change
-    on_failure: always
+    on_success: never
+    on_failure: never
