--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,13 @@
-.editorconfig     export-ignore
-.gitattributes    export-ignore
-/.github/         export-ignore
-.gitignore        export-ignore
+* text=auto
+
+/.editorconfig    export-ignore
+/.gitattributes   export-ignore
+/.gitignore       export-ignore
+/.github          export-ignore
 /.travis.yml      export-ignore
-/build/           export-ignore
+/build            export-ignore
 /humbug.json.dist export-ignore
 /phpunit.xml.dist export-ignore
 /phpunit.xml.dist export-ignore
-/tests/           export-ignore
+/tests            export-ignore
+/README.md        export-ignore
