--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ php:
   - 7.0
   - 7.1
   - 7.2
+  - nightly
 
 git:
   depth: 1
@@ -27,7 +28,7 @@ env:
 matrix:
     fast_finish: true
     allow_failures:
-        - php: 7.2
+        - php: nightly
 
 before_install:
   - if [ ! -z "${GH_TOKEN}" ]; then composer config github-oauth.github.com ${GH_TOKEN}; echo "Configured Github token"; fi;
