--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "preferans/oauth-bridge",
+    "name": "n1kk018/oauth-bridge",
     "license": "MIT",
     "type": "library",
     "homepage": "https://preferans.gitbooks.io/oauth-bridge/content",
